orcid-web/src/main/webapp/static/css/orcid.new.css
/* ... */
/* Login text*/

.login .title {
    text-align: center;
    font-size: 20px;
    color: #494A4C;
    margin-bottom: 20px;
}

.login #login-reset {
    margin-top: 5px;
}

/* Reset password */
.reset-password .controls{
    margin-bottom: 15px;
}

.reset-password p{
        line-height: 18px;
        margin-top: 10px;
    }

.oauth-login .reset-password{
    margin: 0 15px;
}

.oauth-login .reset-password label{
    width: inherit;
}

.reset-password.link-account{
    padding-left: 0;
    padding-right: 0;
}

/* Social Login */

.login .social-login {
    margin-top: 30px;
    margin-bottom: 30px;
}

.login .social-login .title {
    margin-bottom: 10px;
}

.login .social-login .btn-facebook {
    background: url('../img/svg/fb.svg') transparent no-repeat;
    background-size: 40px 40px;
    width: 40px;
    height: 40px;
    display: block;
}

.login .social-login .btn-google {
    background: url('../img/svg/google.svg') transparent no-repeat;
    background-size: 40px 40px;
    width: 40px;
    height: 40px;
    display: block;
}

.login .social-login ul.social-icons {
    margin: 0;
    padding: 0;
    display: block;
    width: 110px;
    margin: 0 auto;
}

.login .social-login ul.social-icons li {
    display: inline-block;
}

.login .social-login ul.social-icons li:not(:first-child) {
    margin-left: 25px;
}

.login #authorize-button {
    min-width: 100px;
    width: auto;
    float: left !important;
    /*Overwrite Bootstrap defaults*/
    display: block;
}

.login .institution-login .title {
    margin-bottom: 10px;
}


/* EDIT PROFILE */

.record-buttons {
    margin-top: 30px;
    height: 35px;
    width: 100%;
}


/* Edit Also Known as */

.edit-record {
    height: auto;
    min-height: 550px;
    overflow: visible;
    padding: 15px 0 14px 15px;
    width: 600px;
}

.edit-record-bulk-edit {
    min-height: 610px;
}

.edit-record-emails {
    width: 600px;
    padding: 15px 0 15px 15px;
    min-height: 678px;
}

.fixed-area .scroll-area input[type="textbox"],
.fixed-area .scroll-area input[type="text"],
.fixed-area .scroll-area select {
    width: 100%;
    margin-bottom: 0;
}

.fixed-area .col-md-12 {
    padding-right: 0;
}

.aka-row {
    margin-bottom: 25px;
    min-height: 55px;
    height: auto;
}

.fixed-area .aka {
    color: #494A4C;
    font-size: 24px;
}

.fixed-area .created-date {
    margin-right: 15px;
    font-size: 12px;
}

.fixed-area ul.record-settings {
    margin-right: 15px;
    padding-left: 0;
}

.fixed-area ul.record-settings .privacyToggle {
    height: 29px;
    margin-left: 5px;
}

.fixed-area ul.record-settings>li {
    display: inline-block;
    vertical-align: middle;
}

.fixed-area ul.record-settings li .glyphicon-trash {
    margin-top: 5px;
    font-size: 18px;
    color: #494a4c;
}


.record-settings div {
    margin: 0 5px;
    cursor: pointer;
}

.record-settings div.circle {
    background: #494a4c;
    padding: 5px;
    border-radius: 50%;
    color: #FFF;
}

.record-settings div.circle:hover {
    background: #a6ce39;
    color: #FFF;
}
/********************/
.fixed-area {
    /* Global class for edit profile */
    /*height: 350px;*/
    min-height: 350px;
    /*overflow-y: scroll;*/
    overflow: visible;
    /*overflow-x: hidden;*/
    width: 100%;
}

.record-settings > li {
    position: relative;
}

.record-settings div.glyphicon + div {
    left: 0;
    position: absolute;
    top: 0;
}

.record-settings div.glyphicon + div .popover-tooltip {
    left: 0!important;
    pointer-events: none;
    top: -40px!important;
    transform: translateX(-50%);
}

.edit-record .popover .arrow {
    left: 50%!important;
}

/*
*/

.fixed-area ul.record-settings li .glyphicon-trash:hover {
    color: #a6ce39;
}
.record-buttons .cancel-option {
    margin: 5px 15px 0 0;
}

.record-buttons .glyphicon-plus {
    background: #31789B;
    padding: 5px;
    border-radius: 50%;
    color: #FFF;
}

.not-allowed {
    cursor: not-allowed;
}


/* New Public menu */

.container .header .navigation.public,
.header .navigation > .menu.public,
.header .navigation >.menu.public >li {
    height: 30px;
    background: #FFF;
}

.header .navigation>.menu.public>li>a {
    height: 30px;
    padding: 5px 17px 5px;
    font-weight: normal;
    background: #FFF;
    color: #338caf;
}

.header .navigation >.menu.public >li {
    border-left: 1px solid #C9CACB;
}

.header .navigation >.menu.public >li.active-trail,
.header .navigation>.menu.public>li.active-trail>a {
    background: #338caf;
    color: #FFF;
}

.header .navigation>.menu.public>li>a:hover {
    background: #338caf;
    color: #FFF;
}

.delete-email-box {
    height: 100px;
}

.confirm-password-box {
    height: 140px;
}

.delete-email-box li,
.confirm-password-box li {
    margin-left: 10px;
}

.verify-email-box {
    height: 80px;
}

.revoke-social .form-social-sign-in #ajax-loader {
    margin-left: 5px;
}

.revoke-social {
    min-height: 195px;
}

.bibtex-box #downloadlink {
    font-size: 12px;
}

.email-pop-up .editTablePadCell35 {
    margin-right: 20px;
    margin-left: 15px;
}

.email-pop-up .table-responsive {
    margin-right: -20px;
    margin-left: -20px;
}

.email-pop-up .col-md-12,
.email-pop-up .control-group {
    margin-right: -15px;
    margin-left: -15px;
}

.settings-table .table-responsive {
    overflow-x: initial;
}

.workspace-section .workspace-section-heading li:last-child {
    float: right;
}

.workspace-section .workspace-section-heading li span:first-child {
    width: auto;
}

.workspace-section .workspace-section-heading li.right span.toggle {
    float: right;
    display: block;
    width: 15px;
    position: relative;
    cursor: pointer;
}

.workspace-section .workspace-section-heading li span.toggle i {
    float: left;
}

.workspace-section .workspace-section-heading li span.toggle:hover i:before {
    color: rgb(166, 206, 57);
}

.workspace-section .workspace-section-heading li span i:before {
    font: 17px/1em 'Glyphicons Regular';
    color: #494A4C;
}
/* ... */

